components/storage/longhorn/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
